feat(auth): implement modern split-screen design for all auth flows

--- a/src/main/resources/templates/fragments/admin-common.html
+++ b/src/main/resources/templates/fragments/admin-common.html
@@ -17,6 +17,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/material_blue.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/status.css">
+    <link rel="stylesheet" href="/css/auth.css">
 </head>
 
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
